--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -39,7 +39,7 @@
                 android:orientation="horizontal">
 
                 <com.mikhaellopez.circularimageview.CircularImageView
-                    android:id="@+id/image_profile"
+                    android:id="@+id/user_Image"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     app:civ_border_color="@color/black"
