--- a/app/src/main/res/layout/bottom_sheet_pick.xml
+++ b/app/src/main/res/layout/bottom_sheet_pick.xml
@@ -21,7 +21,7 @@
         >
 
         <LinearLayout
-            android:id="@+id/ln_gallery"
+            android:id="@+id/btn_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -40,7 +40,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/ln_camera"
+            android:id="@+id/btn_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
