--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,8 +16,10 @@
         android:background="@color/colorPrimaryDark"
         >
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_arrow_back_24"
         app:title="Settings"
         app:titleTextColor="@color/white"
         android:background="@color/colorPrimaryDark">
