--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -31,10 +31,12 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="1"
+                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
                 android:text="Profile Photo"
                 android:textColor="@color/white"
                 android:textSize="15sp"
+                android:textStyle="bold"
                 android:layout_marginStart="15dp"/>
 
             <ImageButton
