--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -14,11 +14,11 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Theme.MessangerTest"
         android:background="@color/colorPrimaryDark"
         >
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            app:navigationIcon="@drawable/ic_arrow_back_24"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             app:title="Profile"
@@ -57,7 +57,6 @@
         android:orientation="vertical">
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
@@ -251,5 +250,19 @@
 
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_logOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SIGN OUT"
+        android:background="@android:color/transparent"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_margin="15dp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"/>
+
 </LinearLayout>
+
     </layout>
